Split out desktop-theme

--- a/src/frontend/packages/desktop-extensions/src/desktop-login/desktop-login.component.scss
+++ b/src/frontend/packages/desktop-extensions/src/desktop-login/desktop-login.component.scss
@@ -1,1 +1,7 @@
-@import '../../loader/loading.css';
+// Should match loading page
+.container {
+  /* Matches $background-color in colors.scss */
+  background-color: #fafafa;
+  height: 100%;
+  width: 100%;
+}
