--- a/src/frontend/packages/desktop-extensions/src/installer/choose-type/choose-type.component.html
+++ b/src/frontend/packages/desktop-extensions/src/installer/choose-type/choose-type.component.html
@@ -17,7 +17,8 @@
           {{type.description}}
         </div>
         <div class="button">
-          <button (click)="edit()" mat-raised-button color="primary">
+          <button (click)="edit()" mat-button mat-raised-button color="primary"
+            routerLink="/monocular/install/{{type.chart.id}}/{{type.chart.currentVersion}}">
             Install Now!
           </button>
         </div>
