--- a/src/frontend/packages/desktop-theme/_index.scss
+++ b/src/frontend/packages/desktop-theme/_index.scss
@@ -1,6 +1,6 @@
 @import '~@stratosui/theme/helper';
 
-@import './sass/styles';
+// @import './sass/styles';
 
 // Custom Theme
 @import './sass/colors';
